// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterButtonGroup attempts stake transaction on continue click 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={true}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#3c4d9d0f",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={true}
    loading={true}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#121314",
        "borderRadius": 12,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="continue-button"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </TouchableOpacity>
</View>
`;

exports[`FooterButtonGroup attempts unstake transaction on continue click 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={true}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#3c4d9d0f",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={true}
    loading={true}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#121314",
        "borderRadius": 12,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="continue-button"
  >
    <ActivityIndicator
      color="#ffffff"
      size="small"
    />
  </TouchableOpacity>
</View>
`;

exports[`FooterButtonGroup navigates to Asset page when cancel is pressed 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={false}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#3c4d9d0f",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={false}
    loading={false}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#121314",
        "borderRadius": 12,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="continue-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Continue
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`FooterButtonGroup render matches snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "center",
      "paddingTop": 24,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={false}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#3c4d9d0f",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="cancel-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    disabled={false}
    loading={false}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#121314",
        "borderRadius": 12,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "height": 48,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
    testID="continue-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Continue
    </Text>
  </TouchableOpacity>
</View>
`;
